# book

./: .gitignore  requirements.txt
.specify/memory/: constitution.md
backend/: README.md  agent.README.md  agent.py  agent.quickstart.md  agent_function_tool.py  api.py  conversations.db  conversations.db-shm  conversations.db-wal  main.py  pyproject.toml  requirements.txt  retrieve.py  test_api.py  test_qdrant_search.py  test_server.py
frontend/: .gitignore  README.md  docusaurus.config.js  package-lock.json  sidebars.js
frontend/docs/: intro.md
frontend/docs/module-1/: 01-introduction-to-ros2-for-physical-ai.md  02-ros2-communication-model.md  03-robot-structure-with-urdf.md
frontend/docs/module-2/: 01-physics-simulation-with-gazebo.md  02-digital-twins-hri-in-unity.md  03-sensor-simulation-validation.md
frontend/docs/module-3/: 01-nvidia-isaac-sim-photorealistic-simulation.md  02-isaac-ros-vslam-navigation.md  03-nav2-path-planning-humanoid-robots.md
frontend/docs/module-4/: 01-voice-to-action-openai-whisper.md  02-cognitive-planning-natural-language-ros2.md  03-capstone-project-autonomous-humanoid.md
specs/001-docusaurus-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-book-embeddings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-rag-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/3-openai-agent-rag/: spec.md  tasks.md
specs/4-fastapi-rag-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+35 files in other folders)
